--- a/.themes/BlackWhite/gtk-3.0/gtk-widgets.css
+++ b/.themes/BlackWhite/gtk-3.0/gtk-widgets.css
@@ -47,7 +47,8 @@ GtkWindow {
 * {
     /* inherit the color from parent by default */
     color: inherit;
-    background-color: @white;
+    /*background-color: @white;*/
+    background-color: transparent;
     background-image: none;
 }
 
